[project]
name = "neo4j-crypto-kg-api"
version = "0.1.0"
description = "Neo4j knowledge graph query API for crypto assessment reports"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.116.0",
    "neo4j>=5.26.0,<6.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_kg_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
